force-app/main/default/objects/AR_Receipt__c/fields/Sub_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub GL Account</label>
    <referenceTo>Sub_GL_Account__c</referenceTo>
    <relationshipLabel>Receipt</relationshipLabel>
    <relationshipName>Receipt</relationshipName>
    <type>Lookup</type>
</CustomField>