force-app/main/default/objects/AR_Receipt__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reverse_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Funds (INF)</fullName>
            </value>
            <value>
                <fullName>Irregular Signature</fullName>
            </value>
            <value>
                <fullName>Closed Account</fullName>
            </value>
            <value>
                <fullName>Frozen Account</fullName>
            </value>
            <value>
                <fullName>Dormant Account</fullName>
            </value>
            <value>
                <fullName>Second Signature Required</fullName>
            </value>
            <value>
                <fullName>Amount in words and Numbers Differ</fullName>
            </value>
            <value>
                <fullName>Missing Signature</fullName>
            </value>
            <value>
                <fullName>Special Item to be Represented</fullName>
            </value>
            <value>
                <fullName>ABS Incorrect cheque Details</fullName>
            </value>
            <value>
                <fullName>Unusable or Poor Quality</fullName>
            </value>
            <value>
                <fullName>Swift Confirmation Awaited</fullName>
            </value>
            <value>
                <fullName>Cheque to be Present Physically</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Technical Issue at issued bank</fullName>
            </value>
            <value>
                <fullName>Stale Cheque</fullName>
            </value>
            <value>
                <fullName>Alteration on Item without Proper Endorsement</fullName>
            </value>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
            <value>
                <fullName>Wrong Date</fullName>
            </value>
            <value>
                <fullName>Wrong Cash Account</fullName>
            </value>
            <value>
                <fullName>Wrong Unit</fullName>
            </value>
            <value>
                <fullName>Duplicate Receipt</fullName>
            </value>
            <value>
                <fullName>Wrong Mode of Payment</fullName>
            </value>
            <value>
                <fullName>Wrongly Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>