force-app/main/default/objects/AR_Receipt__c/fields/Supply_Month__c.field-meta.xml
<CustomField>
    <fullName>Supply_Month__c</fullName>
    <formula>TEXT(MONTH(Supply_Date__c)) + &apos;/&apos; + TEXT(YEAR(Supply_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Month</label>
    <type>Text</type>
</CustomField>