force-app/main/default/objects/AR_Receipt__c/fields/Thw_RECEIPT_ID__c.field-meta.xml
<CustomField>
    <fullName>Thw_RECEIPT_ID__c</fullName>
    <formula>IF( Parent_Receipt__c != null , Parent_Receipt__r.Receipt_ID__c,  Receipt_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thw RECEIPT ID</label>
    <type>Text</type>
</CustomField>