force-app/main/default/objects/AR_Receipt__c/fields/Transfer_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Transfer_After_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer After Approval</label>
    <type>Checkbox</type>
</CustomField>