force-app/main/default/objects/AR_Receipt__c/fields/Transfer_Of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Of_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Of Funds</label>
    <type>Checkbox</type>
</CustomField>