force-app/main/default/objects/AR_Receipt__c/fields/TransferOppId__c.field-meta.xml
<CustomField>
    <fullName>TransferOppId__c</fullName>
    <label>TransferOppId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>