force-app/main/default/objects/AR_Receipt__c/fields/TrfIns__c.field-meta.xml
<CustomField>
    <fullName>TrfIns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TrfIns</label>
    <type>Checkbox</type>
</CustomField>