force-app/main/default/objects/AR_Receipt__c/fields/Trigger_Amount_Match__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Amount_Match__c</fullName>
    <formula>(Trigger_Amount__c == Unapplied_Amount__c) &amp;&amp; !ISBLANK(Trigger_Amount__c)</formula>
    <label>Trigger Amount Match</label>
    <type>Checkbox</type>
</CustomField>