force-app/main/default/objects/AR_Receipt__c/fields/Unapplied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Amount__c</fullName>
    <formula>Amount__c -  Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>