force-app/main/default/objects/AR_Receipt__c/fields/Update_FT_Lookups__c.field-meta.xml
<CustomField>
    <fullName>Update_FT_Lookups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update FT Lookups</label>
    <type>Checkbox</type>
</CustomField>