force-app/main/default/objects/AR_Receipt__c/fields/Void_Flag__c.field-meta.xml
<CustomField>
    <fullName>Void_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void Flag</label>
    <type>Checkbox</type>
</CustomField>