force-app/main/default/objects/AR_Receipt__c/fields/Yardi_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>Yardi_CreatedBy__c</fullName>
    <label>Yardi CreatedBy</label>
    <length>54</length>
    <type>Text</type>
</CustomField>