force-app/main/default/objects/AR_Receipt__c/fields/Yardi_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Yardi_CreatedDate__c</fullName>
    <description>The field is to store Yardi Created Date</description>
    <label>Yardi CreatedDate</label>
    <type>DateTime</type>
</CustomField>